# cuda-x-skills

./: .gitignore  README.md  install-skills.sh
.claude-plugin/: marketplace.json
prototype/: agent_workflow_demo.sh  cccl_demo.sh  e2e_suite.sh  registry.toml  registry_schema.md  structure_extractor.py  test_docs.html  topology_mapper.py
skills/: SKILL.md
skills/cuda-webdoc-search/: Makefile  README.md  SKILL.md  audit.py  cli.py  fetchers.py  get.py  pyproject.toml  pyrightconfig.json  registry.py  registry.toml  registry_audit.py  scoring.py  search.py  structure_extractor.py  topology_mapper.py
skills/cuda-webdoc-search/references/: registry_schema.md
skills/cuda-webdoc-search/tests/: conftest.py  test_registry.py  test_registry_audit.py  test_search.py  test_structure_extractor.py  test_topology_mapper.py
