[project]
name = "cuda-webdoc-search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["beautifulsoup4", "rapidfuzz", "requests", "sphobjinv", "typer"]

[project.scripts]
cws = "cli:app"

[dependency-groups]
test = ["pytest", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
  "cli.py",
  "search.py",
  "audit.py",
  "get.py",
  "fetchers.py",
  "scoring.py",
  "registry.py",
]
